--- a/site01/styles.css
+++ b/site01/styles.css
@@ -75,3 +75,21 @@ nav ul li a {
 nav ul li a:last-child{
   margin-right: 0;
 }
+
+nav ul li a::before,
+nav ul li a::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: crimson;
+  left: 0;
+}
+
+nav ul li a::before {
+  top: 0;
+}
+
+nav ul li a::after {
+  bottom: 0;
+}
