--- a/site01/styles.css
+++ b/site01/styles.css
@@ -84,12 +84,21 @@ nav ul li a::after {
   height: 2px;
   background-color: crimson;
   left: 0;
+  transform: scaleX(0);
+  transition: all .5s;
 }
 
 nav ul li a::before {
   top: 0;
+  transform-origin: left;
 }
 
 nav ul li a::after {
   bottom: 0;
+  transform-origin: right;
+}
+
+nav ul li a:hover::before,
+nav ul li a:hover::after {
+  transform: scaleX(1)
 }
