--- a/sites/site01/styles.css
+++ b/sites/site01/styles.css
@@ -11,6 +11,10 @@ html {
   font-family: 'Roboto Cn', sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 a {
   text-decoration: none;
   color: #eee;
@@ -43,6 +47,8 @@ nav {
 .brand {
   font-size: 3rem;
   font-weight: 300;
+  transform: translateX(-100rem);
+  animation: slideIn .5s forwards;
 }
 
 .brand span {
@@ -55,6 +61,21 @@ nav ul {
 
 nav ul li {
   list-style: none;
+  transform: translateX(100rem);
+  animation: slideIn .5s forwards;
+}
+
+nav ul li:nth-child(1) {
+  animation-delay: 0s;
+}
+nav ul li:nth-child(2) {
+  animation-delay: .5s;
+}
+nav ul li:nth-child(3) {
+  animation-delay: 1s;
+}
+nav ul li:nth-child(4) {
+  animation-delay: 1.5s;
 }
 
 /*
@@ -101,4 +122,12 @@ nav ul li a::after {
 nav ul li a:hover::before,
 nav ul li a:hover::after {
   transform: scaleX(1)
+}
+
+@keyframes slideIn {
+  from {
+  }
+  to {
+    transform: translateX(0);
+  }
 }
