--- a/sites/site01/styles.css
+++ b/sites/site01/styles.css
@@ -25,7 +25,7 @@ a {
 body {
   width: 100%;
   height: 100vh;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0,0,0,.5)), url('bg.jpg') center no-repeat;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, .8), rgba(0,0,0,.5)), url('bg.jpeg') center no-repeat;
   background-size: cover;
 }
 
